--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
             margin: 0;
             background: #000000;
         }
+        #wrap{
+            margin-top: 10%;
+            position: relative;
+        }
 
         /* canvas {
             display: block;
