ready and wair update size on mac

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         * {
             padding: 0;
             margin: 0;
-            /* background: #000000; */
+            background: #000000;
         }
 
         /* #wrap {
@@ -34,13 +34,13 @@
         } */
 
         .btn {
-            width: 120px;
-            height: 50px;
+            width: 140px;
+            height: 90px;
             font-size: 40px;
             color: orange;
             /* background-color: white; */
             position: absolute;
-            left: 190px;
+            left: 180px;
             top: 20%;
             background-color: Transparent;
             background-repeat: no-repeat;
@@ -63,7 +63,7 @@
             color: orange;
             position: absolute;
             left: 50px;
-            top: 20%;
+            top: 24%;
             background: transparent;
             font-size: 20px;
             font-family: Arial;
@@ -75,7 +75,7 @@
         .resultStyle {
             left: 60%;
             position: absolute;
-            top: 20%;
+            top: 23%;
             color: orange;
             background-color: transparent;
         }
@@ -85,6 +85,15 @@
             justify-content: space-between;
             width: 200px;
             background-color: transparent;
+        }
+
+        .headResult {
+            position: absolute;
+            color: orange;
+            background-color: transparent;
+            top: 18%;
+            left: 83%;
+            font-size: 30px;
         }
 
         /* .ajax{
