--- a/index.html
+++ b/index.html
@@ -19,13 +19,11 @@
         } */
         #wrap {
             width: 250px;
-            height: 750px;
+            height: 250px;
             position: absolute;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            left: 0;
-            margin: auto;
+            top: 25%;
+            left: 40%;
+            margin: -125px 0 0 -125px;
         }
 
         /* canvas {
@@ -35,13 +33,13 @@
 
         .btn {
             width: 140px;
-            height: 90px;
+            /* height: 250px; */
             font-size: 40px;
             color: orange;
             /* background-color: white; */
             position: absolute;
             left: 180px;
-            top: 20%;
+            top: 60%;
             background-color: Transparent;
             background-repeat: no-repeat;
             border: none;
@@ -52,18 +50,18 @@
         }
 
         .rules {
-            top: 30%;
+            top: 80%;
         }
 
         .score {
-            top: 40%;
+            top: 100%;
         }
 
         .rule {
             color: orange;
             position: absolute;
             left: 50px;
-            top: 24%;
+            top: 60%;
             background: transparent;
             font-size: 20px;
             font-family: Arial;
@@ -71,11 +69,14 @@
             width: 400px;
             display: flex;
         }
+        .returnFromRule{
+            top: 150%;
+        }
 
         .resultStyle {
             left: 60%;
             position: absolute;
-            top: 23%;
+            top: 70%;
             color: orange;
             background-color: transparent;
         }
@@ -91,7 +92,7 @@
             position: absolute;
             color: orange;
             background-color: transparent;
-            top: 18%;
+            top: 55%;
             left: 83%;
             font-size: 30px;
         }
@@ -99,6 +100,36 @@
         /* .ajax{
             display: none;
         } */
+        @media screen and (max-width: 700px) {
+            * {
+            padding: 0;
+            margin: 0;
+            background: white;
+        }
+        #wrap {
+            width: 250px;
+            height: 250px;
+            position: absolute;
+            top: 25%;
+            left: 30%;
+            margin: -125px 0 0 -125px;
+        }
+}
+@media screen and (max-width: 550px) {
+            * {
+            padding: 0;
+            margin: 0;
+            background: black;
+        }
+        #wrap {
+            width: 250px;
+            height: 250px;
+            position: absolute;
+            top: 25%;
+            left: 25%;
+            margin: -125px 0 0 -125px;
+        }
+}
     </style>
 </head>
 
