--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="src/css/style.css">
 </head>
 
 <body>
@@ -15,11 +15,11 @@
     </div>
 
     <script src="https://fe.it-academy.by/JQ/jquery.js"></script>
-    <script src="assets/js/game.js"></script>
-    <script src="assets/js/players.js"></script>
-    <script src="assets/js/enemies.js"></script>
-    <script src="assets/js/componentsGame.js"></script>
-    <script src="assets/js/ajax.js"></script>
+    <script src="src/js/game.js"></script>
+    <script src="src/js/players.js"></script>
+    <script src="src/js/enemies.js"></script>
+    <script src="src/js/componentsGame.js"></script>
+    <script src="src/js/ajax.js"></script>
 
 </body>
 
