--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="src/js/game.js"></script>
     <script src="src/js/players.js"></script>
     <script src="src/js/enemies.js"></script>
+    <script src="src/js/powerup.js"></script>
     <script src="src/js/componentsGame.js"></script>
     <script src="src/js/ajax.js"></script>
 
